objects/zqu__ZSyncSchema__c.object
<CustomObject>
    <description>Zuora sync schema, this saves the salesforce object field mappings for zuora API objects.</description>
    <fields>
        <fullName>zqu__SfdcFieldName__c</fullName>
        <description>salesforce object field name, it could be standard or custom</description>
        <label>SfdcFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SyncObjectType__c</fullName>
        <description>supported salesforce object type for syncing</description>
        <label>SfdcObjectType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>ProductRatePlan__c</fullName>
                </value>
                <value>
                    <fullName>ProductRatePlanCharge__c</fullName>
                </value>
                <value>
                    <fullName>ProductRatePlanChargeTier__c</fullName>
                </value>
                <value>
                    <fullName>ZFeature__c</fullName>
                </value>
                <value>
                    <fullName>ZProductFeature__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZFieldName__c</fullName>
        <description>Zuora field name</description>
        <label>ZFieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZFieldType__c</fullName>
        <description>Zuora field type</description>
        <label>ZFieldType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZObjectType__c</fullName>
        <description>Zuora Object Type. i.e. Product, ProductRatePlan, Feature.</description>
        <label>ZObjectType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether the field is required on Zuora</description>
        <label>ZRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>ZSyncSchema</label>
    <nameField>
        <label>ZSyncSchema Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZSyncSchemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>